add endpoint for getting transactions from mongodb

--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.79",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
+    "antd": "^5.14.0",
     "axios": "^1.6.7",
+    "compression": "^1.7.4",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.2",
+    "mongoose": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
@@ -24,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"cd server && nodemon server.js\" \"npm run start\""
+    "dev": "concurrently \"cd server && nodemon server.ts\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
